Intentando que funcione el color css

--- a/P1/S3/Ejemplos/03-hello.css
+++ b/P1/S3/Ejemplos/03-hello.css
@@ -1,7 +1,7 @@
 /* Ejemplo de hoja de estilo */
 /* Estilo para el cuerpo del HTML */
 body {
-    background-color: lightblue;
+    background-color: white;
 }
 /* Estilo para las etiquetas de tipo h1 */
 h1 {
