--- a/P2/S6/canvas-07.css
+++ b/P2/S6/canvas-07.css
@@ -1,6 +1,7 @@
 /* Estilo del canvas
-Lo bordeamos con una línea negra y le damos fondo azul
-para distinguirlo */
+  Lo bordeamos con una línea negra y le damos fondo
+  azul para distinguirlo
+*/
 
 canvas {
     background-color: lightblue;
@@ -8,7 +9,8 @@ canvas {
     border-width: 1px;
     border-color: black;
     border-radius: 5px;
-}
+  }
+
 /* Imagen deshabilitada
    Se usa para leerla desde js y
    meterla en el canvas */
